--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@caasy/sdk-js": "0.1.3-beta",
+        "@netlify/plugin-nextjs": "^3.9.0",
         "dompurify": "^2.0.12",
         "highlight.js": "^10.1.1",
         "marked": "^1.1.1",
